software/applications/osdu-azure/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/rev: asm-1-19
  name: osdu-azure
