software/applications/osdu-azure/ingress.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: osdu-core
spec:
  mtls:
    mode: STRICT
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: osdu-core
  namespace: osdu-core
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/internal-gateway
    - istio-system/external-gateway
  http:
    - match:
        - uri:
            prefix: "/api/partition/v1/"
      route:
        - destination:
            host: "partition.osdu-azure.svc.cluster.local"
            port:
              number: 80
    - match:
        - uri:
            prefix: "/api/entitlements/v2/"
      route:
        - destination:
            host: "entitlement.osdu-azure.svc.cluster.local"
            port:
              number: 80
    - match:
        - uri:
            prefix: "/api/legal/v1/"
      route:
        - destination:
            host: "legal.osdu-azure.svc.cluster.local"
            port:
              number: 80
    - match:
        - uri:
            prefix: "/api/schema-service/v1/"
      route:
        - destination:
            host: "schema-service.osdu-azure.svc.cluster.local"
            port:
              number: 80
    - match:
        - uri:
            prefix: "/api/file/"
      route:
        - destination:
            host: "file.osdu-azure.svc.cluster.local"
            port:
              number: 80
