software/applications/osdu-azure/partition-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: partition
  namespace: osdu-azure
spec:
  hosts:
    - "*"
  gateways:
    - aks-istio-ingress/istio-external-gateway
    - aks-istio-ingress/istio-internal-gateway
  http:
    - match:
        - uri:
            prefix: "/api/partition/v1/"
      route:
        - destination:
            host: "partition.osdu-azure.svc.cluster.local"
            port:
              number: 80
